[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Madi Zhanbyrtayev <madi.zhanbyrtayev@nexxiot.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"